--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col">
             <div class="header__nav">
               <ul class="header__nav-list">
-                <li class="header__nav-item">HOME</li>
+                <li class="header__nav-item header__nav-item--actived">HOME</li>
                 <li class="header__nav-item">RESUME</li>
                 <li class="header__nav-item">PROJECTS</li>
                 <li class="header__nav-item">CONTACT</li>
@@ -49,7 +49,11 @@
         <div class="row">
           <div class="col l-6 m-5 s-12">
             <div class="main__avatar">
-              <img src="https://via.placeholder.com/500" alt="avatar" />
+              <div class="main__avatar-thumbnail"></div>
+              <!-- <img
+                src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+                alt="avatar"
+              /> -->
             </div>
           </div>
           <div class="col l-6 m-7 s-12">
@@ -58,9 +62,9 @@
               <p class="main__desc-about-me">a bit about me:</p>
             </div>
             <div class="main__desc-list">
-              <div class="main__desc-item">MY RESUME</div>
-              <div class="main__desc-item">MY WORK</div>
-              <div class="main__desc-item">MY SKILL</div>
+              <div class="main__desc-item main__desc-item--red">MY RESUME</div>
+              <div class="main__desc-item main__desc-item--blue">MY WORK</div>
+              <div class="main__desc-item main__desc-item--yellow">MY SKILL</div>
             </div>
             <div class="main__desc-intro">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione alias expedita
@@ -88,12 +92,11 @@
           </div>
           <div class="col l-3 m-6 s-12">
             <div class="footer__item">
-              <div class="footer__item-icon"><i class="fa-solid fa-phone"></i></div>
+              <div class="footer__item-icon"><i class="fa-solid fa-envelope"></i></div>
               <div class="footer__item-desc">
-                <div class="footer__item-title">Call</div>
+                <div class="footer__item-title">Contact</div>
                 <div class="footer__item-subtitle">
-                  <p>T: 123-456-7890</p>
-                  <p>T: 123-456-7890</p>
+                  <p>info@mysite.com</p>
                 </div>
               </div>
             </div>
@@ -102,22 +105,23 @@
             <div class="footer__item">
               <div class="footer__item-icon"><i class="fa-solid fa-phone"></i></div>
               <div class="footer__item-desc">
-                <div class="footer__item-title">Call</div>
+                <div class="footer__item-title">Follow me</div>
                 <div class="footer__item-subtitle">
-                  <p>T: 123-456-7890</p>
-                  <p>T: 123-456-7890</p>
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-twitter"></i>
                 </div>
               </div>
             </div>
           </div>
           <div class="col l-3 m-6 s-12">
             <div class="footer__item">
-              <div class="footer__item-icon"><i class="fa-solid fa-phone"></i></div>
+              <div class="footer__item-icon">
+                <i class="fa-solid fa-copyright"></i>
+              </div>
               <div class="footer__item-desc">
-                <div class="footer__item-title">Call</div>
                 <div class="footer__item-subtitle">
-                  <p>T: 123-456-7890</p>
-                  <p>T: 123-456-7890</p>
+                  <p>2023 by NicolaRider</p>
+                  <p>Created with Wix.com</p>
                 </div>
               </div>
             </div>
